--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: c
 install: travis_wait 30 mvn install
 sudo: false # only for faster builds
 script:
-  - sh cl.sh
+  - travis_wait 30 sh cl.sh
